# generic_gazebo_camera_plugin

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: default.yaml  experiment.yaml
launch/: spawn_camera.launch  spawn_camera.xml  spawn_cameras.launch
params/: parameters.yaml
rviz/: camera_default_config.rviz
scripts/: generate_checkerboard.py  spawn_cameras.py
scripts/utils/: cameras_config_file_utils.py  launch_manager.py  utils.py
urdf/: camera.xacro  camera_standalone.urdf.xacro
urdf/meshes/: camera.blend  camera.stl  camera2.stl
urdf/meshes/assets/models/usb_cable_ebfa6cc5-ddbc-44cb-9e4b-325d47dabe4e/: usb_cable_2af218e9-b9c4-468e-a09c-b3dde119a59c.blend
worlds/: experiment.world
